--- a/frontend/styles/login.css
+++ b/frontend/styles/login.css
@@ -3,8 +3,9 @@
 
 .page
 {
-    background-image: url('https://images.squarespace-cdn.com/content/56c20f7cd51cd440f4c1f656/1521582708368-YUFXVH9VYFYOGIDBYJUN/img-013.jpg?format=1500w&content-type=image%2Fjpeg');
-    background-size: 2000px 980px;
+  background:#fff url('https://images.squarespace-cdn.com/content/56c20f7cd51cd440f4c1f656/1521582708368-YUFXVH9VYFYOGIDBYJUN/img-013.jpg?format=1500w&content-type=image%2Fjpeg') center center no-repeat;
+  background-attachment: fixed;
+  background-size:100% auto;
 }
 .login-page {
   width: 360px;
