--- a/frontend/styles/login.css
+++ b/frontend/styles/login.css
@@ -6,6 +6,7 @@
   background:#fff url('https://images.squarespace-cdn.com/content/56c20f7cd51cd440f4c1f656/1521582708368-YUFXVH9VYFYOGIDBYJUN/img-013.jpg?format=1500w&content-type=image%2Fjpeg') center center no-repeat;
   background-attachment: fixed;
   background-size:100% auto;
+  height: 100%;
 }
 .login-page {
   width: 360px;
@@ -112,4 +113,64 @@ body {
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) 
+{
+  .page 
+  {
+    background:#fff url('https://images.squarespace-cdn.com/content/56c20f7cd51cd440f4c1f656/1521582708368-YUFXVH9VYFYOGIDBYJUN/img-013.jpg?format=1500w&content-type=image%2Fjpeg') center center no-repeat;
+    background-attachment: fixed;
+    background-size:100% auto;
+    height: 100%;
+  }
+ 
+}
+ 
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) 
+{
+  .page 
+  {
+    background:#fff url('https://images.squarespace-cdn.com/content/56c20f7cd51cd440f4c1f656/1521582708368-YUFXVH9VYFYOGIDBYJUN/img-013.jpg?format=1500w&content-type=image%2Fjpeg') center center no-repeat;
+    background-attachment: fixed;
+    background-size:100% auto;
+    height: 100%;
+  }
+}
+ 
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) 
+{
+  .page 
+  {
+    background:#fff url('https://images.squarespace-cdn.com/content/56c20f7cd51cd440f4c1f656/1521582708368-YUFXVH9VYFYOGIDBYJUN/img-013.jpg?format=1500w&content-type=image%2Fjpeg') center center no-repeat;
+    background-attachment: fixed;
+    background-size:100% auto;
+    height: 100%;
+  }
+}
+ 
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) 
+{
+  .page 
+  {
+    background:#fff url('https://images.squarespace-cdn.com/content/56c20f7cd51cd440f4c1f656/1521582708368-YUFXVH9VYFYOGIDBYJUN/img-013.jpg?format=1500w&content-type=image%2Fjpeg') center center no-repeat;
+    background-attachment: fixed;
+    background-size:100% auto;
+    height: 100%;
+  }
+}
+ 
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px)
+{.page 
+  {
+    background:#fff url('https://images.squarespace-cdn.com/content/56c20f7cd51cd440f4c1f656/1521582708368-YUFXVH9VYFYOGIDBYJUN/img-013.jpg?format=1500w&content-type=image%2Fjpeg') center center no-repeat;
+    background-attachment: fixed;
+    background-size:100% auto;
+    height: 100%;
+  }
 }
